- adding font-weight for links - fixing spacing for cards & content - added purple links where needed - main gradient to homepage

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -141,6 +141,7 @@ $lighter-gradient: linear-gradient(transparentize($gradient-p, 0.61), transparen
   }
   &__purple > a {
     &:visited, &:link {
+      font-weight: 400;
       color: var(--darker-purple);
     }
     &:active, &:hover {
