--- a/assets/scss/components/_project.scss
+++ b/assets/scss/components/_project.scss
@@ -7,7 +7,7 @@
   overflow: hidden;
   &-item{
     position: relative;
-    // margin-bottom: 30px;
+    margin-bottom: 30px;
     transition: all 0.3s ease-in;
     box-shadow: var(--shadow-light-1);
     &-thumb{
@@ -33,7 +33,7 @@
       position: absolute;
       background-color: $b_purple;
       width: 100%;
-      padding: 45px 50px;
+      padding: 25px 50px;
       bottom: 0;
       transition: all .3s $site-ease;
       @include tablet{
@@ -44,7 +44,7 @@
         font-family: $secondary-font;
         color: $b_opposite;
         display: block;
-        margin-bottom: 10px;
+        // margin-bottom: 10px;
       }
       /* Portfolio page title size */
       h4{
